--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 
 <body>
     <div class="windows" id="win">
-        <p> Eres quien me ayudó cuando más lo necesite, te amo con todo mi corazón, terminamos este año juntos, no solo este año también los proximos de los proximos, gato beesooooo 😼.</p>
+        <p> No puedo dejar de recordar aquel momento en el que me perdí en lo profundo de tus ojos café, que se transforman en miel bajo el brillo del sol 
+            y se crea un brillo único cuando se encuentran con los míos. Esos ojos son testigos de lo mejor que hay en mí, me brindaron la oportunidad 
+            de ser yo mismo de nuevo. Cada vez que me miras, encuentro en tus ojos un refugio donde me recuerdan lo grande que puede ser nuestro amor.
+            Te amo mininita.</p>
 
         <div id="cerrar">
             <button type="button" class="color-button-close" id="win" onclick="cerrar();"> Cerrar </button>
@@ -19,9 +22,8 @@
     </div>
 
     <div class="container">
-        <h1>Feliz año nuevo luz de mis ojos</h1>
-        <p> Te amo más que ayer, pero menos que mañana.</br>
-            Nunca lo dudes pls.</p>
+        <h1>Se viene Febrero, ¿mes del amor?</h1>
+        <p>Para nosotros es el mes donde terminaremos de ver la casa de papel aaahhhhhh</p>
         <button type="button" class="color-button" id="win" onclick="abrir();"> Abrir </button>
     </div>
 
