--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
    <div>
         <a href="Galeria1.html" type="button" class="color-button-next"> Galeria</a>
     </div>
+
+    <div>
+        <a href="index2.html" type="button" class="color-button-next">San Valentín</a>
+    </div>
 </footer>
 <br>
 
