--- a/Galeria7.html
+++ b/Galeria7.html
@@ -1,1 +1,138 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylegalery.css">
+    <link rel="icon" href="imagenes/ImagenA.jpeg">
+
+      <title>Quinta Galeria</title>
+</head>
+
+<body>
+
+    <div class="container">
+        <h1>Quinta Galeria</h1>
+        <a href="index.html" type="button" class="color-button-back"> Inicio </a>
+    </div>
+
+    <div class="gallery">
+        <div class="photo" onclick="openModal('', '', 'imagenes/Imagen181.jpeg')">
+    <img src="imagenes/Imagen181jpeg" alt="Foto 181">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen182.jpeg')">
+    <img src="imagenes/Imagen182.jpeg" alt="Foto 182">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen183.jpeg')">
+    <img src="imagenes/Imagen183.jpeg" alt="Foto 183">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen.jpeg184')">
+    <img src="imagenes/Imagen184.jpeg" alt="Foto 184">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen185.jpeg')">
+    <img src="imagenes/Imagen185.jpeg" alt="Foto 185">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen185.jpeg')">
+    <img src="imagenes/Imagen185.jpeg" alt="Foto 185">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen186.jpeg')">
+    <img src="imagenes/Imagen186.jpeg" alt="Foto 186">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen187.jpeg')">
+    <img src="imagenes/Imagen187.jpeg" alt="Foto 187">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen187.jpeg')">
+    <img src="imagenes/Imagen187.jpeg" alt="Foto 187">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen188.jpeg')">
+    <img src="imagenes/Imagen188.jpeg" alt="Foto 188">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen189.jpeg')">
+    <img src="imagenes/Imagen189.jpeg" alt="Foto 189">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen190.jpeg')">
+    <img src="imagenes/Imagen190.jpeg" alt="Foto ">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen191.jpeg')">
+    <img src="imagenes/Imagen191.jpeg" alt="Foto 191">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen192.jpeg')">
+    <img src="imagenes/Imagen192.jpeg" alt="Foto 192">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen193.jpeg')">
+    <img src="imagenes/Imagen193.jpeg" alt="Foto 193">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen194.jpeg')">
+    <img src="imagenes/Imagen194.jpeg" alt="Foto 194">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen195.jpeg')">
+    <img src="imagenes/Imagen195.jpeg" alt="Foto 195">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen195.jpeg')">
+    <img src="imagenes/Imagen195.jpeg" alt="Foto 195">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen196.jpeg')">
+    <img src="imagenes/Imagen196.jpeg" alt="Foto 196">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen197.jpeg')">
+    <img src="imagenes/Imagen197.jpeg" alt="Foto 197">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen198.jpeg')">
+    <img src="imagenes/Imagen198.jpeg" alt="Foto 198">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen199.jpeg')">
+    <img src="imagenes/Imagen199.jpeg" alt="Foto 199">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen200.jpeg')">
+    <img src="imagenes/Imagen200.jpeg" alt="Foto 200">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen201.jpeg')">
+    <img src="imagenes/Imagen201.jpeg" alt="Foto 201">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen202.jpeg')">
+    <img src="imagenes/Imagen202.jpeg" alt="Foto 202">
+</div>
+	
+
+    </div>
+    <!-- Agrega más elementos .photo para más fotos -->
+    
+    <div class="modal" id="modal" onclick="closeModal()">
+        <div class="modal-content" onclick="event.stopPropagation();">
+            <h2 id="modal-title">Título de la Foto</h2>
+            <p id="modal-description">Descripción de la foto.</p>
+            <img id="modal-image" class="modal-image" src="" alt="">
+        </div>
+    </div>
+    <script>
+        function openModal(title, description, imageUrl) {
+            var modal = document.getElementById("modal");
+            var modalTitle = document.getElementById("modal-title");
+            var modalDescription = document.getElementById("modal-description");
+            var modalImage = document.getElementById("modal-image");
+
+            modalTitle.textContent = title;
+            modalDescription.textContent = description;
+            modalImage.src = imageUrl;
+
+            modal.style.display = "flex";
+        }
+
+        function closeModal() {
+            var modal = document.getElementById("modal");
+            modal.style.display = "none";
+        }
+    </script>
+</body>
+<br>
+<footer class="contenedor">
+    <div>
+        <a href="Galeria4.html" type="button" class="color-button-back"> Atras </a>
+    </div>
+    <br>
+    <div>
+        <a href="Galeria6.html" type="button" class="color-button-back"> Siguiente </a>
+    </div>
+</footer>
+<br>
