--- a/Galeria7.html
+++ b/Galeria7.html
@@ -93,7 +93,9 @@
 <div class="photo" onclick="openModal('', '', 'imagenes/Imagen202.jpeg')">
     <img src="imagenes/Imagen202.jpeg" alt="Foto 202">
 </div>
-	
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen203.jpeg')">
+    <img src="imagenes/Imagen203.jpeg" alt="Foto 203">
+</div>	
 
     </div>
     <!-- Agrega más elementos .photo para más fotos -->
