--- a/Galeria6.html
+++ b/Galeria6.html
@@ -116,7 +116,7 @@
         </div>
 	<div class="photo" onclick="openModal('Patanazcos', 'No se como se llamaban, dime pls jhashjdhjashjdhja', 'imagenes/Imagen180.jpeg')">
             <img src="imagenes/Imagen180.jpeg" alt="Foto 180">
-
+	</div>
     </div>
     <!-- Agrega más elementos .photo para más fotos -->
     
@@ -154,7 +154,7 @@
     </div>
     <br>
     <div>
-        <a href="index.html" type="button" class="color-button-back"> Inicio </a>
+        <a href="Galeria7.html" type="button" class="color-button-back"> Siguiente </a>
     </div>
 </footer>
 <br>
