--- a/Galeria7.html
+++ b/Galeria7.html
@@ -130,11 +130,11 @@
 <br>
 <footer class="contenedor">
     <div>
-        <a href="Galeria4.html" type="button" class="color-button-back"> Atras </a>
+        <a href="Galeria6.html" type="button" class="color-button-back"> Atras </a>
     </div>
     <br>
     <div>
-        <a href="Galeria6.html" type="button" class="color-button-back"> Siguiente </a>
+        <a href="index.html" type="button" class="color-button-back"> Inicio </a>
     </div>
 </footer>
 <br>
