--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
         <a href="Galeria1.html" type="button" class="color-button-next"> Galeria</a>
     </div>
     <br>
-    <div>
+    <!--<div>
         <a href="index2.html" type="button" class="color-button-next">San Valentín</a>
-    </div>
+    </div>-->
 </footer>
 <br>
 
