--- a/Galeria7.html
+++ b/Galeria7.html
@@ -18,82 +18,73 @@
     </div>
 
     <div class="gallery">
-        <div class="photo" onclick="openModal('', '', 'imagenes/Imagen181.jpeg')">
-    <img src="imagenes/Imagen181jpeg" alt="Foto 181">
+        <div class="photo" onclick="openModal('Skinker', 'Gozus con el skinker😼', 'imagenes/Imagen181.jpeg')">
+    <img src="imagenes/Imagen181.jpeg" alt="Foto 181">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen182.jpeg')">
+<div class="photo" onclick="openModal('Party day', 'Jjkajkhshjahjs maquillaje color brown XD', 'imagenes/Imagen182.jpeg')">
     <img src="imagenes/Imagen182.jpeg" alt="Foto 182">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen183.jpeg')">
+<div class="photo" onclick="openModal('Peewwoooos', 'Asao tratando de espacar', 'imagenes/Imagen183.jpeg')">
     <img src="imagenes/Imagen183.jpeg" alt="Foto 183">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen.jpeg184')">
+<div class="photo" onclick="openModal('Simplemente :p', '😽', 'imagenes/Imagen.jpeg184')">
     <img src="imagenes/Imagen184.jpeg" alt="Foto 184">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen185.jpeg')">
+<div class="photo" onclick="openModal('Gaattoooo', 'Gato jatazo en el teclao', 'imagenes/Imagen185.jpeg')">
     <img src="imagenes/Imagen185.jpeg" alt="Foto 185">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen185.jpeg')">
-    <img src="imagenes/Imagen185.jpeg" alt="Foto 185">
-</div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen186.jpeg')">
+<div class="photo" onclick="openModal('hkjaskjhKHJAS', 'Mi fav ❤️', 'imagenes/Imagen186.jpeg')">
     <img src="imagenes/Imagen186.jpeg" alt="Foto 186">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen187.jpeg')">
+<div class="photo" onclick="openModal('Goals', 'Goals forever', 'imagenes/Imagen187.jpeg')">
     <img src="imagenes/Imagen187.jpeg" alt="Foto 187">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen187.jpeg')">
-    <img src="imagenes/Imagen187.jpeg" alt="Foto 187">
-</div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen188.jpeg')">
+<div class="photo" onclick="openModal('Un vegetal', 'Mi hermanito estado vegetal', 'imagenes/Imagen188.jpeg')">
     <img src="imagenes/Imagen188.jpeg" alt="Foto 188">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen189.jpeg')">
+<div class="photo" onclick="openModal('Altas ganas de ser Tabo', 'QUIERO SER TABOOOOOO', 'imagenes/Imagen189.jpeg')">
     <img src="imagenes/Imagen189.jpeg" alt="Foto 189">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen190.jpeg')">
+<div class="photo" onclick="openModal('Gatos???', 'Gatopink in your area', 'imagenes/Imagen190.jpeg')">
     <img src="imagenes/Imagen190.jpeg" alt="Foto ">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen191.jpeg')">
+<div class="photo" onclick="openModal('La amo', 'Te amo mininita', 'imagenes/Imagen191.jpeg')">
     <img src="imagenes/Imagen191.jpeg" alt="Foto 191">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen192.jpeg')">
+<div class="photo" onclick="openModal('Ultra mega', 'Goals', 'imagenes/Imagen192.jpeg')">
     <img src="imagenes/Imagen192.jpeg" alt="Foto 192">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen193.jpeg')">
+<div class="photo" onclick="openModal('Pan con trago??', 'Admito que estaba ricooooo, lo admito', 'imagenes/Imagen193.jpeg')">
     <img src="imagenes/Imagen193.jpeg" alt="Foto 193">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen194.jpeg')">
+<div class="photo" onclick="openModal('Regresando de mi jai', 'Se me olvidó el collar y tuve que regresar Xd', 'imagenes/Imagen194.jpeg')">
     <img src="imagenes/Imagen194.jpeg" alt="Foto 194">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen195.jpeg')">
+<div class="photo" onclick="openModal('My poor Mininiitaaa', 'Su pata con hielo', 'imagenes/Imagen195.jpeg')">
     <img src="imagenes/Imagen195.jpeg" alt="Foto 195">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen195.jpeg')">
-    <img src="imagenes/Imagen195.jpeg" alt="Foto 195">
-</div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen196.jpeg')">
+<div class="photo" onclick="openModal('Que bellos', 'Nos amo', 'imagenes/Imagen196.jpeg')">
     <img src="imagenes/Imagen196.jpeg" alt="Foto 196">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen197.jpeg')">
+<div class="photo" onclick="openModal('Ese pewo', 'Ta asadazo', 'imagenes/Imagen197.jpeg')">
     <img src="imagenes/Imagen197.jpeg" alt="Foto 197">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen198.jpeg')">
+<div class="photo" onclick="openModal('jhkKHAJSKHJjas', 'Nerfeen a los terna pls XD', 'imagenes/Imagen198.jpeg')">
     <img src="imagenes/Imagen198.jpeg" alt="Foto 198">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen199.jpeg')">
+<div class="photo" onclick="openModal('Ty a Ariane', 'Por esa hermosa fotis de mi mininiitaaaa', 'imagenes/Imagen199.jpeg')">
     <img src="imagenes/Imagen199.jpeg" alt="Foto 199">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen200.jpeg')">
+<div class="photo" onclick="openModal('Luke comiendo', 'Porque si', 'imagenes/Imagen200.jpeg')">
     <img src="imagenes/Imagen200.jpeg" alt="Foto 200">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen201.jpeg')">
+<div class="photo" onclick="openModal('Un degrasiao', 'JHKahjkskjhahjsjh', 'imagenes/Imagen201.jpeg')">
     <img src="imagenes/Imagen201.jpeg" alt="Foto 201">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen202.jpeg')">
+<div class="photo" onclick="openModal('Rikaaazoooo', 'More pls ', 'imagenes/Imagen202.jpeg')">
     <img src="imagenes/Imagen202.jpeg" alt="Foto 202">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen203.jpeg')">
+<div class="photo" onclick="openModal('Un vieje', 'Con los pibes', 'imagenes/Imagen203.jpeg')">
     <img src="imagenes/Imagen203.jpeg" alt="Foto 203">
 </div>	
 
