--- a/Galeria7.html
+++ b/Galeria7.html
@@ -87,7 +87,22 @@
 <div class="photo" onclick="openModal('Un vieje', 'Con los pibes', 'imagenes/Imagen203.jpeg')">
     <img src="imagenes/Imagen203.jpeg" alt="Foto 203">
 </div>	
-
+<div class="photo" onclick="openModal('Mi cat tiene un pollito', 'En su pilin XD', 'imagenes/Imagen204.jpeg')">
+    <img src="imagenes/Imagen204.jpeg" alt="Foto 204">
+</div>
+<div class="photo" onclick="openModal('Piola la galeria', 'JHhajkskjhAJKHS puro gato XD', 'imagenes/Imagen205.jpeg')">
+    <img src="imagenes/Imagen205.jpeg" alt="Foto 205">
+</div>
+<div class="photo" onclick="openModal('Un Pirañe', 'Se llevan a mi tío tmr', 'imagenes/Imagen206.jpeg')">
+    <img src="imagenes/Imagen206.jpeg" alt="Foto 206">
+</div>
+<div class="photo" onclick="openModal('Llaves', 'Mega Goals', 'imagenes/Imagen207.jpeg')">
+    <img src="imagenes/Imagen207.jpeg" alt="Foto 207">
+</div>
+<div class="photo" onclick="openModal('JHJKHAHJKSHJK', 'Me está haciendo un titooookJHhjaks', 'imagenes/Imagen208.jpeg')">
+    <img src="imagenes/Imagen208.jpeg" alt="Foto 208">
+</div>
+        
     </div>
     <!-- Agrega más elementos .photo para más fotos -->
     
