--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+o<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -22,8 +22,8 @@
     </div>
 
     <div class="container">
-        <h1>Se viene Febrero, ¿mes del amor?</h1>
-        <p>Para nosotros es el mes donde terminaremos de ver la casa de papel aaahhhhhh</p>
+        <h1>Nuestro año comienza aquí amor</h1>
+        <p>Se que estaremos mejor que nunca, estaré para tí como tu lo estarás para mí, unos chicles masticados jijijj. Te amo y no dejaré de amarte.</p></p>
         <button type="button" class="color-button" id="win" onclick="abrir();"> Abrir </button>
     </div>
 
