--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-o<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -23,7 +23,7 @@ o<!DOCTYPE html>
 
     <div class="container">
         <h1>Nuestro año comienza aquí amor</h1>
-        <p>Se que estaremos mejor que nunca, estaré para tí como tu lo estarás para mí, unos chicles masticados jijijj. Te amo y no dejaré de amarte.</p></p>
+        <p>Se que estaremos mejor que nunca, estaré para tí como tú lo estarás para mí, unos chicles masticados jijijj. Te amo y no dejaré de amarte.</p></p>
         <button type="button" class="color-button" id="win" onclick="abrir();"> Abrir </button>
     </div>
 
