--- a/Galeria7.html
+++ b/Galeria7.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="stylegalery.css">
     <link rel="icon" href="imagenes/ImagenA.jpeg">
 
-      <title>Quinta Galeria</title>
+      <title>Séptima Galeria</title>
 </head>
 
 <body>
 
     <div class="container">
-        <h1>Quinta Galeria</h1>
+        <h1>Séptima Galeria</h1>
         <a href="index.html" type="button" class="color-button-back"> Inicio </a>
     </div>
 
