--- a/Galeria7.html
+++ b/Galeria7.html
@@ -140,7 +140,7 @@
     </div>
     <br>
     <div>
-        <a href="index.html" type="button" class="color-button-back"> Inicio </a>
+        <a href="Galeria8.html" type="button" class="color-button-back"> Siguiente </a>
     </div>
 </footer>
 <br>
