--- a/Galeria8.html
+++ b/Galeria8.html
@@ -18,11 +18,44 @@
     </div>
 
     <div class="gallery">
-        <div class="photo" onclick="openModal('Skinker', 'Gozus con el skinker😼', 'imagenes/Imagen181.jpeg')">
-    <img src="imagenes/Imagen181.jpeg" alt="Foto 181">
+        <div class="photo" onclick="openModal('Peleeaaaa', 'Pelea de pewoooos', 'imagenes/Imagen209.jpeg')">
+    <img src="imagenes/Imagen209.jpeg" alt="Foto 209">
 </div>
-<div class="photo" onclick="openModal('Party day', 'Jjkajkhshjahjs maquillaje color brown XD', 'imagenes/Imagen182.jpeg')">
-    <img src="imagenes/Imagen182.jpeg" alt="Foto 182">
+
+<div class="photo" onclick="openModal('Llevaré 4 amor', 'Mininita hermosa probando ropita', 'imagenes/Imagen210.jpeg')">
+    <img src="imagenes/Imagen210.jpeg" alt="Foto 210">
+</div>
+
+<div class="photo" onclick="openModal('Cenita', 'Huevo revuelto con salchiche realizado por mi mininita', 'imagenes/Imagen211.jpeg')">
+    <img src="imagenes/Imagen211.jpeg" alt="Foto 211">
+</div>
+
+<div class="photo" onclick="openModal('Rikoooo', 'Amo lo que me das amorcito', 'imagenes/Imagen212.jpeg')">
+    <img src="imagenes/Imagen212.jpeg" alt="Foto 212">
+</div>
+
+<div class="photo" onclick="openModal('Otakooo', 'Dulces otakos amor jijij', 'imagenes/Imagen213.jpeg')">
+    <img src="imagenes/Imagen213.jpeg" alt="Foto 213">
+</div>
+
+<div class="photo" onclick="openModal('Pewos esperando', 'Los perritos esperando aaawwwwww', 'imagenes/Imagen214.jpeg')">
+    <img src="imagenes/Imagen214.jpeg" alt="Foto 214">
+</div>
+
+<div class="photo" onclick="openModal('El diablo', 'El mismisimo diablo amor', 'imagenes/Imagen215.jpeg')">
+    <img src="imagenes/Imagen215.jpeg" alt="Foto 215">
+</div>
+
+<div class="photo" onclick="openModal('Que rico', 'Mi hermosa mininita con el hermoso pewo', 'imagenes/Imagen216.jpeg')">
+    <img src="imagenes/Imagen216.jpeg" alt="Foto 216">
+</div>
+
+<div class="photo" onclick="openModal('Mininita llegando', 'Llegando a Paramonga jijijj', 'imagenes/Imagen217.jpeg')">
+    <img src="imagenes/Imagen217.jpeg" alt="Foto 217">
+</div>
+
+<div class="photo" onclick="openModal('Me llegando', 'Llegando a Paramonga Xd jijijjj', 'imagenes/Imagen218.jpeg')">
+    <img src="imagenes/Imagen218.jpeg" alt="Foto 218">
 </div>
 
         
