--- a/Galeria8.html
+++ b/Galeria8.html
@@ -58,6 +58,51 @@
     <img src="imagenes/Imagen218.jpeg" alt="Foto 218">
 </div>
 
+<div class="photo" onclick="openModal('Buurroooo', 'Burro se queda jato Xd', 'imagenes/Imagen219.jpeg')">
+    <img src="imagenes/Imagen219.jpeg" alt="Foto 219">
+</div>
+
+<div class="photo" onclick="openModal('La casa', 'Casa de las brujes', 'imagenes/Imagen220.jpeg')">
+    <img src="imagenes/Imagen220.jpeg" alt="Foto 220">
+</div>
+
+<div class="photo" onclick="openModal('El ventilador', 'Jjhajhsjhajja', 'imagenes/Imagen221.jpeg')">
+    <img src="imagenes/Imagen221.jpeg" alt="Foto 221">
+</div>
+
+<div class="photo" onclick="openModal('Por fin', 'Juntis en Paramonga', 'imagenes/Imagen222.jpeg')">
+    <img src="imagenes/Imagen222.jpeg" alt="Foto 222">
+</div>
+
+<div class="photo" onclick="openModal('Masajes', 'Masajes en los pies de mi Mininita', 'imagenes/Imagen223.jpeg')">
+    <img src="imagenes/Imagen223.jpeg" alt="Foto 223">
+</div>
+
+
+<div class="photo" onclick="openModal('Brujes??', 'Juntis en la casa de las brujes', 'imagenes/Imagen224.jpeg')">
+    <img src="imagenes/Imagen224.jpeg" alt="Foto 224">
+</div>
+
+<div class="photo" onclick="openModal('Puesta de sol en Paramongue', 'Amando estos días', 'imagenes/Imagen225.jpeg')">
+    <img src="imagenes/Imagen225.jpeg" alt="Foto 225">
+</div>
+
+<div class="photo" onclick="openModal('Playita', 'Juntos en playita de Barranca', 'imagenes/Imagen226.jpeg')">
+    <img src="imagenes/Imagen226.jpeg" alt="Foto 226">
+</div>
+
+<div class="photo" onclick="openModal('Foootiiis', 'Hermosos momentos Mininita', 'imagenes/Imagen227.jpeg')">
+    <img src="imagenes/Imagen227.jpeg" alt="Foto 227">
+</div>
+
+
+<div class="photo" onclick="openModal('Mi modelo', 'Te amo mucho Mininita', 'imagenes/Imagen228.jpeg')">
+    <img src="imagenes/Imagen228.jpeg" alt="Foto 228">
+</div>
+
+<div class="photo" onclick="openModal('Atardecer', 'En playa de Barranca', 'imagenes/Imagen229.jpeg')">
+    <img src="imagenes/Imagen229.jpeg" alt="Foto 229">
+</div>
         
     </div>
     <!-- Agrega más elementos .photo para más fotos -->
