--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="imagenes/ImagenA.jpeg">
-    <title>Tengamos un gran verano</title>
+    <title>Inicio de Ciclo Mininita</title>
 </head>
 
 <body>
@@ -22,8 +22,9 @@
     </div>
 
     <div class="container">
-        <h1>Nuestro año comienza aquí amor</h1>
-        <p>Se que estaremos mejor que nunca, estaré para tí como tú lo estarás para mí, unos chicles masticados jijijj. Te amo y no dejaré de amarte.</p></p>
+        <h1>Ya comenzó nuestro año 20 y 24</h1>
+        <p>Demos todo de nosotros para lograr nuestras metas, personales y como pareja. 
+            Te amo mucho Mininita.</p></p>
         <button type="button" class="color-button" id="win" onclick="abrir();"> Abrir </button>
     </div>
 
