--- a/Galeria4.html
+++ b/Galeria4.html
@@ -123,13 +123,19 @@
     </script>
 </body>
 <br>
-<footer class="contenedor">
+<footer>
     <div>
-        <a href="Galeria3.html" type="button" class="color-button-back"> Atras </a>
-    </div>
-    <br>
-    <div>
-        <a href="Galeria5.html" type="button" class="color-button-back"> Siguiente </a>
+        <div class="pagination">
+            <a href="Galeria1.html" class="active">1</a>
+            <a href="Galeria2.html" class="active">2</a>
+            <a href="Galeria3.html" class="active">3</a>
+            <a href="Galeria4.html" class="active">4</a>
+            <a href="Galeria5.html" class="active">5</a>
+            <a href="Galeria6.html" class="active">6</a>
+            <a href="Galeria7.html" class="active">7</a>
+            <a href="Galeria8.html" class="active">8</a>
+          </div>
+          
     </div>
 </footer>
 <br>
