--- a/Galeria4.html
+++ b/Galeria4.html
@@ -134,6 +134,7 @@
             <a href="Galeria6.html" class="active">6</a>
             <a href="Galeria7.html" class="active">7</a>
             <a href="Galeria8.html" class="active">8</a>
+	    <a href="Galeria9.html" class="active">9</a>
           </div>
           
     </div>
