--- a/Galeria9.html
+++ b/Galeria9.html
@@ -18,13 +18,109 @@
     </div>
 
     <div class="gallery">
-<div class="photo" onclick="openModal('Peleeaaaa', 'Pelea de pewoooos', 'imagenes/Imagen209.jpeg')">
-    <img src="imagenes/Imagen209.jpeg" alt="Foto 209">
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen245.jpeg')">
+    <img src="imagenes/Imagen245.jpeg" alt="Foto 245">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen246.jpeg')">
+    <img src="imagenes/Imagen246.jpeg" alt="Foto 246">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen247.jpeg')">
+    <img src="imagenes/Imagen247.jpeg" alt="Foto 247">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen248.jpeg')">
+    <img src="imagenes/Imagen248.jpeg" alt="Foto 248">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen249.jpeg')">
+    <img src="imagenes/Imagen249.jpeg" alt="Foto 249">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen250.jpeg')">
+    <img src="imagenes/Imagen250.jpeg" alt="Foto 250">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen251.jpeg')">
+    <img src="imagenes/Imagen251.jpeg" alt="Foto 251">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen252.jpeg')">
+    <img src="imagenes/Imagen252.jpeg" alt="Foto 252">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen253.jpeg')">
+    <img src="imagenes/Imagen253.jpeg" alt="Foto 253">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen254.jpeg')">
+    <img src="imagenes/Imagen254.jpeg" alt="Foto 254">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen255.jpeg')">
+    <img src="imagenes/Imagen255.jpeg" alt="Foto 255">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen256.jpeg')">
+    <img src="imagenes/Imagen256.jpeg" alt="Foto 256">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen257.jpeg')">
+    <img src="imagenes/Imagen257.jpeg" alt="Foto 257">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen258.jpeg')">
+    <img src="imagenes/Imagen258.jpeg" alt="Foto 258">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen259.jpeg')">
+    <img src="imagenes/Imagen259.jpeg" alt="Foto 259">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen260.jpeg')">
+    <img src="imagenes/Imagen260.jpeg" alt="Foto 260">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen261.jpeg')">
+    <img src="imagenes/Imagen261.jpeg" alt="Foto 261">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen262.jpeg')">
+    <img src="imagenes/Imagen262.jpeg" alt="Foto 262">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen263.jpeg')">
+    <img src="imagenes/Imagen263.jpeg" alt="Foto 263">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen264.jpeg')">
+    <img src="imagenes/Imagen264.jpeg" alt="Foto 264">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen265.jpeg')">
+    <img src="imagenes/Imagen265.jpeg" alt="Foto 265">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen266.jpeg')">
+    <img src="imagenes/Imagen266.jpeg" alt="Foto 266">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen267.jpeg')">
+    <img src="imagenes/Imagen267.jpeg" alt="Foto 267">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen268.jpeg')">
+    <img src="imagenes/Imagen268.jpeg" alt="Foto 268">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen269.jpeg')">
+    <img src="imagenes/Imagen269.jpeg" alt="Foto 269">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen270.jpeg')">
+    <img src="imagenes/Imagen270.jpeg" alt="Foto 270">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen271.jpeg')">
+    <img src="imagenes/Imagen271.jpeg" alt="Foto 271">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen272.jpeg')">
+    <img src="imagenes/Imagen272.jpeg" alt="Foto 272">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen273.jpeg')">
+    <img src="imagenes/Imagen273.jpeg" alt="Foto 273">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen274.jpeg')">
+    <img src="imagenes/Imagen274.jpeg" alt="Foto 274">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen275.jpeg')">
+    <img src="imagenes/Imagen275.jpeg" alt="Foto 275">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen276.jpeg')">
+    <img src="imagenes/Imagen276.jpeg" alt="Foto 276">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen277.jpeg')">
+    <img src="imagenes/Imagen277.jpeg" alt="Foto 277">
+</div>
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen278.jpeg')">
+    <img src="imagenes/Imagen278.jpeg" alt="Foto 278">
 </div>
 
-<div class="photo" onclick="openModal('Llevaré 4 amor', 'Mininita hermosa probando ropita', 'imagenes/Imagen210.jpeg')">
-    <img src="imagenes/Imagen210.jpeg" alt="Foto 210">
-</div>
 
 
 
