--- a/Galeria9.html
+++ b/Galeria9.html
@@ -21,10 +21,10 @@
 <div class="photo" onclick="openModal('', '', 'imagenes/Imagen245.jpeg')">
     <img src="imagenes/Imagen245.jpeg" alt="Foto 245">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen246.jpeg')">
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen246.jpg')">
     <img src="imagenes/Imagen246.jpeg" alt="Foto 246">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen247.jpeg')">
+<div class="photo" onclick="openModal('', '', 'imagenes/Imagen247.jpg')">
     <img src="imagenes/Imagen247.jpeg" alt="Foto 247">
 </div>
 <div class="photo" onclick="openModal('', '', 'imagenes/Imagen248.jpeg')">
