--- a/GameAll.html
+++ b/GameAll.html
@@ -15,12 +15,44 @@
             font-family: Arial, sans-serif;
             color: white;
             overflow: hidden;
+            position: relative;
         }
 
         .game-container {
             position: relative;
             width: 100%;
             height: 100%;
+        }
+
+        .background-heart {
+            width: 100px;
+            height: 100px;
+            position: absolute;
+            transform: rotate(-45deg);
+            opacity: 0.3;
+            background-size: cover;
+            background-position: center;
+        }
+
+        .background-heart::before,
+        .background-heart::after {
+            content: "";
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            background-size: cover;
+            background-position: center;
+            position: absolute;
+        }
+
+        .background-heart::before {
+            top: -50px;
+            left: 0;
+        }
+
+        .background-heart::after {
+            left: 50px;
+            top: 0;
         }
 
         .heart {
@@ -73,6 +105,17 @@
 </head>
 <body>
     <div class="game-container">
+        <!-- Corazones de fondo con imágenes personalizadas -->
+        <div class="background-heart" style="top: 10%; left: 10%; background-image: url('imagenes/Imagen1.jpeg');"></div>
+        <div class="background-heart" style="top: 10%; left: 50%; background-image: url('imagenes/Imagen2.jpeg');"></div>
+        <div class="background-heart" style="top: 10%; left: 80%; background-image: url('imagenes/Imagen3.jpeg');"></div>
+        <div class="background-heart" style="top: 40%; left: 20%; background-image: url('imagenes/Imagen4.jpeg');"></div>
+        <div class="background-heart" style="top: 40%; left: 70%; background-image: url('imagenes/Imagen5.jpeg');"></div>
+        <div class="background-heart" style="top: 70%; left: 10%; background-image: url('imagenes/Imagen6.jpeg');"></div>
+        <div class="background-heart" style="top: 70%; left: 50%; background-image: url('imagenes/Imagen7.jpeg');"></div>
+        <div class="background-heart" style="top: 70%; left: 80%; background-image: url('imagenes/Imagen8.jpeg');"></div>
+        <div class="background-heart" style="top: 50%; left: 50%; background-image: url('imagenes/Imagen9.jpeg');"></div>
+
         <div class="score">Puntuación: 0</div>
         <div class="message">Haz clic en el corazón para ganar puntos!</div>
         <div class="heart"></div>
