--- a/Galeria7.html
+++ b/Galeria7.html
@@ -146,6 +146,7 @@
             <a href="Galeria7.html" class="active">7</a>
             <a href="Galeria8.html" class="active">8</a>
             <a href="Galeria9.html" class="active">9</a>
+            <a href="Galeria10.html" class="active">10</a>
           </div>
           
     </div>
