--- a/Galeria9.html
+++ b/Galeria9.html
@@ -18,103 +18,103 @@
     </div>
 
     <div class="gallery">
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen245.jpeg')">
+<div class="photo" onclick="openModal('Gato bostezo', 'Bostezo de gato', 'imagenes/Imagen245.jpeg')">
     <img src="imagenes/Imagen245.jpeg" alt="Foto 245">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen246.jpg')">
+<div class="photo" onclick="openModal('Alalau', 'Grande mi Lima gris', 'imagenes/Imagen246.jpg')">
     <img src="imagenes/Imagen246.jpeg" alt="Foto 246">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen247.jpg')">
+<div class="photo" onclick="openModal('Protein', 'Para que el gato sea el emo', 'imagenes/Imagen247.jpg')">
     <img src="imagenes/Imagen247.jpeg" alt="Foto 247">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen248.jpeg')">
+<div class="photo" onclick="openModal('No olvidar', 'Another titulo ez', 'imagenes/Imagen248.jpeg')">
     <img src="imagenes/Imagen248.jpeg" alt="Foto 248">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen249.jpeg')">
+<div class="photo" onclick="openModal('Mininita gamer', 'Pa cuando sus Bratz', 'imagenes/Imagen249.jpeg')">
     <img src="imagenes/Imagen249.jpeg" alt="Foto 249">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen250.jpeg')">
+<div class="photo" onclick="openModal('JhjashjJKAS', 'Bien feo po mi mae ese cat', 'imagenes/Imagen250.jpeg')">
     <img src="imagenes/Imagen250.jpeg" alt="Foto 250">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen251.jpeg')">
+<div class="photo" onclick="openModal('Uuuuff', 'El cuchareable', 'imagenes/Imagen251.jpeg')">
     <img src="imagenes/Imagen251.jpeg" alt="Foto 251">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen252.jpeg')">
+<div class="photo" onclick="openModal('Jataza', 'Mininita jataza', 'imagenes/Imagen252.jpeg')">
     <img src="imagenes/Imagen252.jpeg" alt="Foto 252">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen253.jpeg')">
+<div class="photo" onclick="openModal('Solo vivirá en nuestros paladares', 'Pina and mandarine', 'imagenes/Imagen253.jpeg')">
     <img src="imagenes/Imagen253.jpeg" alt="Foto 253">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen254.jpeg')">
+<div class="photo" onclick="openModal('Asao pq no le invito', 'Asadaaaazooo', 'imagenes/Imagen254.jpeg')">
     <img src="imagenes/Imagen254.jpeg" alt="Foto 254">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen255.jpeg')">
+<div class="photo" onclick="openModal('HJKkhjakshkJHA', 'Se quemó con el fuego y lo odia', 'imagenes/Imagen255.jpeg')">
     <img src="imagenes/Imagen255.jpeg" alt="Foto 255">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen256.jpeg')">
+<div class="photo" onclick="openModal('Tortite', 'Regresa el taper de mi mom Xd', 'imagenes/Imagen256.jpeg')">
     <img src="imagenes/Imagen256.jpeg" alt="Foto 256">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen257.jpeg')">
+<div class="photo" onclick="openModal('Besito en el centro', 'Paseo en el centro', 'imagenes/Imagen257.jpeg')">
     <img src="imagenes/Imagen257.jpeg" alt="Foto 257">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen258.jpeg')">
+<div class="photo" onclick="openModal('Mooochiii', 'Taba bueno el de mangoooww', 'imagenes/Imagen258.jpeg')">
     <img src="imagenes/Imagen258.jpeg" alt="Foto 258">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen259.jpeg')">
+<div class="photo" onclick="openModal('HJkhjkashjkKHAJS', 'Esa carita hermosa', 'imagenes/Imagen259.jpeg')">
     <img src="imagenes/Imagen259.jpeg" alt="Foto 259">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen260.jpeg')">
+<div class="photo" onclick="openModal('Gozuu', 'Cinex', 'imagenes/Imagen260.jpeg')">
     <img src="imagenes/Imagen260.jpeg" alt="Foto 260">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen261.jpeg')">
+<div class="photo" onclick="openModal('Que se repita pls', '', 'imagenes/Imagen261.jpeg')">
     <img src="imagenes/Imagen261.jpeg" alt="Foto 261">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen262.jpeg')">
+<div class="photo" onclick="openModal('Minimo su panetón', '', 'imagenes/Imagen262.jpeg')">
     <img src="imagenes/Imagen262.jpeg" alt="Foto 262">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen263.jpeg')">
+<div class="photo" onclick="openModal('Una chiki no ma', '', 'imagenes/Imagen263.jpeg')">
     <img src="imagenes/Imagen263.jpeg" alt="Foto 263">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen264.jpeg')">
+<div class="photo" onclick="openModal('Amé ese maquillaje', 'Tengo tu fotito jijij', 'imagenes/Imagen264.jpeg')">
     <img src="imagenes/Imagen264.jpeg" alt="Foto 264">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen265.jpeg')">
+<div class="photo" onclick="openModal('Me', 'me', 'imagenes/Imagen265.jpeg')">
     <img src="imagenes/Imagen265.jpeg" alt="Foto 265">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen266.jpeg')">
+<div class="photo" onclick="openModal('Sisoy', '', 'imagenes/Imagen266.jpeg')">
     <img src="imagenes/Imagen266.jpeg" alt="Foto 266">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen267.jpeg')">
+<div class="photo" onclick="openModal('F', 'Son señales', 'imagenes/Imagen267.jpeg')">
     <img src="imagenes/Imagen267.jpeg" alt="Foto 267">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen268.jpeg')">
+<div class="photo" onclick="openModal('Así me espera ', 'Gaaatoooo', 'imagenes/Imagen268.jpeg')">
     <img src="imagenes/Imagen268.jpeg" alt="Foto 268">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen269.jpeg')">
+<div class="photo" onclick="openModal('Quieroooo', 'Gops', 'imagenes/Imagen269.jpeg')">
     <img src="imagenes/Imagen269.jpeg" alt="Foto 269">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen270.jpeg')">
+<div class="photo" onclick="openModal('La patita de mi pewiiitoo', '', 'imagenes/Imagen270.jpeg')">
     <img src="imagenes/Imagen270.jpeg" alt="Foto 270">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen271.jpeg')">
+<div class="photo" onclick="openModal('Luki liku', 'Amo', 'imagenes/Imagen271.jpeg')">
     <img src="imagenes/Imagen271.jpeg" alt="Foto 271">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen272.jpeg')">
+<div class="photo" onclick="openModal('Mi casacaaa', 'JKHHASHJHJAS', 'imagenes/Imagen272.jpeg')">
     <img src="imagenes/Imagen272.jpeg" alt="Foto 272">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen273.jpeg')">
+<div class="photo" onclick="openModal('Ser', 'O no ser', 'imagenes/Imagen273.jpeg')">
     <img src="imagenes/Imagen273.jpeg" alt="Foto 273">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen274.jpeg')">
+<div class="photo" onclick="openModal('Mininita diriendo de frillo', 'F', 'imagenes/Imagen274.jpeg')">
     <img src="imagenes/Imagen274.jpeg" alt="Foto 274">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen275.jpeg')">
+<div class="photo" onclick="openModal('La frente más hermosa del mundo', 'Del universo', 'imagenes/Imagen275.jpeg')">
     <img src="imagenes/Imagen275.jpeg" alt="Foto 275">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen276.jpeg')">
+<div class="photo" onclick="openModal('Amando ando', 'Quiero otro viaje pls', 'imagenes/Imagen276.jpeg')">
     <img src="imagenes/Imagen276.jpeg" alt="Foto 276">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen278.jpeg')">
+<div class="photo" onclick="openModal('Mi enamorada', 'Mi hermosa mininita', 'imagenes/Imagen278.jpeg')">
     <img src="imagenes/Imagen278.jpeg" alt="Foto 278">
 </div>
 
@@ -165,6 +165,7 @@
             <a href="Galeria7.html" class="active">7</a>
             <a href="Galeria8.html" class="active">8</a>
             <a href="Galeria9.html" class="active">9</a>
+            <a href="Galeria10.html" class="active">10</a>
           </div>
           
     </div>
