--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
 <br>
 <footer>
    <div>
-        <a href="Galeria1.html" type="button" class="color-button-next"> Galeria</a>
+        <a href="Galeria1.html" type="button" class="color-button-next">Galeria</a>
+    </div>
+    <div>
+        <a href="GameAll.html" type="button" class="color-button-next">Jueguito</a>
     </div>
     <br>
     <!--<div>
