--- a/GameAll.html
+++ b/GameAll.html
@@ -178,8 +178,10 @@
             
             if (score > 10) {
                 messageDisplay.innerHTML = `¡Felicidades! Obtuviste una puntuación de ${score}. ¡Eres un experto atrapando corazones!`;
+                <a href="index.html" type="button" class="color-button-back"> Inicio </a>
             } else {
                 messageDisplay.innerHTML = `¡Juego terminado! Puntuación final: ${score}. ¡Sigue practicando para mejorar!`;
+                <a href="index.html" type="button" class="color-button-back"> Inicio </a>
             }
 
             messageDisplay.style.opacity = '1';
