--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="imagenes/ImagenA.jpeg">
-    <title>Inicio de Ciclo Mininita</title>
+    <title>Feliz aniversario</title>
 </head>
 
 <body>
     <div class="windows" id="win">
-        <p> No puedo dejar de recordar aquel momento en el que me perdí en lo profundo de tus ojos café, que se transforman en miel bajo el brillo del sol 
-            y se crea un brillo único cuando se encuentran con los míos. Esos ojos son testigos de lo mejor que hay en mí, me brindaron la oportunidad 
-            de ser yo mismo de nuevo. Cada vez que me miras, encuentro en tus ojos un refugio donde me recuerdan lo grande que puede ser nuestro amor.
+        <p> Desde el primer instante en que me perdí en la profundidad de tus ojos café, supe que algo especial 
+            estaba por suceder. Bajo la luz del sol, esos ojos se transforman en un cálido tono miel que ilumina 
+            mi mundo y me llena de una paz desconocida. Ese brillo único que surge cuando tus ojos se encuentran 
+            con los míos me da vida. Eres todo lo que amo, y te amo más que ayer, pero menos que mañana.
+
             Te amo mininita.</p>
 
         <div id="cerrar">
@@ -30,10 +32,10 @@
 
     <div class="container">
         <div>
-            <img class="image" src="imagenes/ImagenA.jpeg" alt="Imagen 1">
-            <img class="image" src="imagenes/ImagenB.jpeg" alt="Imagen 3">
-            <img class="image" src="imagenes/ImagenC.jpeg" alt="Imagen 2">
-            <img class="image" src="imagenes/ImagenD.jpeg" alt="Imagen 4">
+            <img class="image" src="imagenes/ImagenE.jpeg" alt="Imagen 1">
+            <img class="image" src="imagenes/ImagenF.jpeg" alt="Imagen 3">
+            <img class="image" src="imagenes/ImagenG.jpeg" alt="Imagen 2">
+            <img class="image" src="imagenes/ImagenH.jpeg" alt="Imagen 4">
         </div>
     </div>
 
